--- a/src/data/Hero.yml
+++ b/src/data/Hero.yml
@@ -1,33 +1,34 @@
 title: Hero Items
 items:
-  - id: homepage-hero
-    title: >-
-      We’re about software. Software is about people.
-    description: >-
-      We have a long history of designing and developing amazing experiences for iOS, Android, and Responsive Web. We’re a team of industry leading experts who create solutions and build applications using cutting edge technology to help your business succeed. We love what we do and it shows in our work.
+  - description: >-
+      **Test RICH TEXT + markdown.** We have a long history of designing and
+      developing amazing experiences for iOS, Android, and Responsive Web. We’re
+      a team of industry leading experts who create solutions and build
+      applications using cutting edge technology to help your business succeed.
+      We love what we do and it shows in our work.
+    id: homepage-hero
     image: /images/heroes/blue-collar-home-hero-cool.jpg
-    link: "/company"
+    link: /company
     linkText: Our Story
-    caption:
-    subCaption:
-  - id: services-hero
-    title: >-
-      Applications crafted with precision and care
-    description: >-
-      Building beautiful, usable, fast and scalable applications is our thing. Drawing on deep experience in solution design and combining it with great listening, we work closely with your team to define a solution for the business challenge at hand. Then, we infuse user feedback and priorities into every stage of the software development process.
+    title: We’re about software. Software is about people.
+  - description: >-
+      Building beautiful, usable, fast and scalable applications is our thing.
+      Drawing on deep experience in solution design and combining it with great
+      listening, we work closely with your team to define a solution for the
+      business challenge at hand. Then, we infuse user feedback and priorities
+      into every stage of the software development process.
+    id: services-hero
     image: /images/portfolio/bc-showcase-app-quickcommerce.png
-    link: "/services"
+    link: /services
     linkText: Learn More
-    caption:
-    subCaption:
-  - id: projects-hero
-    title: >-
-      Customers love our work
-    description: >-
-      Every app is a collection of details, priorities, and tradeoffs, built on some core principles about what makes for a great experience. We collectively have over 150 years of experience, and we use it to make each new app shine.
+    title: Applications crafted with precision and care
+  - description: >-
+      Every app is a collection of details, priorities, and tradeoffs, built on
+      some core principles about what makes for a great experience. We
+      collectively have over 150 years of experience, and we use it to make each
+      new app shine.
+    id: projects-hero
     image: /images/banners/responsive-banner-jimmy-poblanos.png
-    link: "/projects"
+    link: /projects
     linkText: Browse Projects
-    caption:
-    subCaption:
-
+    title: Customers love our work
