--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
 		"postcss-loader": "^3.0.0",
 		"rework-loader": "^0.1.1",
 		"sass-loader": "^7.1.0",
-		"style-loader": "^0.23.1"
+		"style-loader": "^0.23.1",
+		"vue-markdown": "^2.2.4"
 	},
 	"license": "MIT"
 }
