--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -123,12 +123,12 @@ collections:
                     widget: "list"
                     fields:
                       - { label: "ID", name: "id", widget: "string" }
-                      - { label: "Title", name: "title", widget: "string" }
+                      - { label: "Title", name: "title", widget: "string", required: false }
                       - { label: "Subtitle", name: "subtitle", widget: "string", required: false }
-                      - { label: "Description", name: "description", widget: "markdown" }
-                      - { label: "Link", name: "link", widget: "string" }
-                      - { label: "Link Text", name: "linkText", widget: "string" }
-                      - { label: "Image", name: "image", widget: "string" }
+                      - { label: "Description", name: "description", widget: "markdown", required: false }
+                      - { label: "Link", name: "link", widget: "string", required: false }
+                      - { label: "Link Text", name: "linkText", widget: "string", required: false }
+                      - { label: "Image", name: "image", widget: "string", required: false }
                       - { label: "Caption", name: "caption", widget: "string", required: false }
                       - { label: "Sub-Caption", name: "subCaption", widget: "string", required: false }
 
