Refactor portfolio. Add markdown support for description.

--- a/src/data/Portfolio.yml
+++ b/src/data/Portfolio.yml
@@ -42,7 +42,7 @@ items:
       I designed a custom SPA-style mobile-friendly Asian-styled theme for their website featuring CSS
       animations and a custom menu component. A customized build of OpenCart is used on the backend for content
       and product management.
-  - projectName: Caffe Tech Inventory Management and Data Bridge
+  - projectName: iOS Tablet Point-of-Sale
     client: Caffe Tech 2004 Ltd.
     startDate: 2015-09-01 12:00:00
     endDate: 2016-04-01 12:00:00
