Update Widgets “hero”

--- a/src/data/Hero.yml
+++ b/src/data/Hero.yml
@@ -23,15 +23,18 @@ items:
     linkText: Learn More
     title: Applications crafted with precision and care
   - description: >-
-      Drawing on deep experience in solution design and combining it with great
-      listening, we work closely with your team to define a solution for the
-      business challenge at hand. Then, we infuse user feedback and priorities
-      into every stage of the software development process.
-      But that's not where we stop. At Blue Collar, we don’t leave clients once
-      their product is built. We strive to maintain our relationship because we
-      understand the dynamics of the rapidly changing Information Age. Following
-      the delivery of our product, we provide monthly support in order to improve
-      your online business. We are always here to help!
+      Drawing on deep experience in solution design and combining it with
+      ~~great listening~~, we work closely with your team to define a solution
+      for the business challenge at hand. Then, we infuse user feedback and
+      priorities into every stage of the software development process. But
+      that's not where we stop. 
+
+
+      At Blue Collar, we don’t leave clients once their product is built. We
+      strive to maintain our relationship because we understand the dynamics of
+      the rapidly changing Information Age. Following the delivery of our
+      product, we provide monthly support in order to improve your online
+      business. We are always here to help!
     id: projects-hero
     image: /images/banners/responsive-banner-jimmy-poblanos.png
     link: /projects
